fixed the alignment of the cards

--- a/four-card-feature-section-master/four-card-feature-section-master/public/css/style.css
+++ b/four-card-feature-section-master/four-card-feature-section-master/public/css/style.css
@@ -23,8 +23,7 @@ main {
 }
 @media (min-width: 1200px) {
   main {
-    width: fit-content;
-    padding-top: 3em;
+    width: min-content;
     align-items: center;
   }
 }
@@ -61,7 +60,7 @@ main section img {
 @media (min-width: 1200px) {
   .border-style-1 {
     grid-row: 2/4;
-    grid-column: 1/2;
+    grid-column: 2/4;
   }
 }
 
@@ -71,7 +70,7 @@ main section img {
 @media (min-width: 1200px) {
   .border-style-2 {
     grid-row: 1/3;
-    grid-column: 2/3;
+    grid-column: 4/5;
   }
 }
 
@@ -81,7 +80,7 @@ main section img {
 @media (min-width: 1200px) {
   .border-style-3 {
     grid-row: 3/5;
-    grid-column: 2/3;
+    grid-column: 4/5;
   }
 }
 
@@ -91,7 +90,7 @@ main section img {
 @media (min-width: 1200px) {
   .border-style-4 {
     grid-row: 2/4;
-    grid-column: 3/4;
+    grid-column: 5/6;
   }
 }
 
@@ -138,10 +137,9 @@ main section img {
 @media (min-width: 1200px) {
   .container {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(6, 1fr);
     grid-template-rows: repeat(5, 1fr);
     gap: 2em;
-    width: 80%;
   }
 }
 
